# auditwheel

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  conftest.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.devcontainer/: Dockerfile  demo.sh  devcontainer.json
.github/workflows/: lint.yml  release.yml  test.yml
auditwheel/: __main__.py  condatools.py  elfutils.py  error.py  genericpkgctx.py  hashfile.py  lddtree.py  libc.py  main.py  main_addtag.py  main_lddtree.py  main_repair.py  main_show.py  main_symbols.py  musllinux.py  patcher.py  repair.py  symbolcheck.py  tmpdirs.py  tools.py  wheel_abi.py  wheeltools.py
auditwheel/policy/: __init__.py  abi_tag.py  external_references.py  musllinux-policy.json  policy-schema.json  policy.json  versioned_symbols.py
deloc8/: __main__.py  condatools.py  fixup.py  genericpkgctx.py  lddtree.py  linkertools.py  main.py  main_fixup.py  main_lddtree.py  main_listdeps.py  main_show.py  main_versym.py  readelf.py  tools.py  versym.py  wheel_abi.py  wheeltools.py
deloc8/policy/: __init__.py  external_references.py  policy-schema.json  policy.json  versioned_symbols.py
delocate/: __main__.py  main_listdeps.py  readelf.py  tools.py  wheeltools.py
scripts/: calculate_symbol_versions.py  create-arch-wheels.sh
src/auditwheel/: __main__.py  architecture.py  condatools.py  elfutils.py  error.py  genericpkgctx.py  hashfile.py  json.py  lddtree.py  libc.py  main.py  main_addtag.py  main_lddtree.py  main_repair.py  main_show.py  musllinux.py  options.py  patcher.py  pool.py  repair.py  sboms.py  show-schema.json  tmpdirs.py  tools.py  wheel_abi.py  wheeltools.py  whichprovides.py
src/auditwheel/_vendor/whichprovides/: LICENSE.txt  __init__.py  __main__.py
src/auditwheel/policy/: __init__.py  android-policy.json  external_references.py  manylinux-policy.json  musllinux-policy.json  versioned_symbols.py
tests/: cffi-1.5.0-cp27-none-linux_x86_64.whl  install.sh  python_snappy-0.5.2-pp260-pypy_41-linux_x86_64.whl  quick_check_numpy.py  test-wheelhouses.sh  test_bundled_cffi.py  test_bundled_pypy_snappy.py  test_hello.py  test_manylinux.py  test_policy.py  test_pyfpe.py  travis.sh
tests/integration/: conftest.py  fpewheel-0.0.0-cp35-cp35m-linux_x86_64.whl  libffi.so.5  plumbum-1.6.8-py2.py3-none-any.whl  python_mscl-67.0.1.0-cp313-cp313-manylinux2014_aarch64.whl  quick_check_numpy.py  test-wheelhouses.sh  test_addtag.py  test_android.py  test_bundled_cffi.py  test_bundled_pypy_snappy.py  test_bundled_wheels.py  test_manylinux.py  test_nonplatform_wheel.py  test_policy_files.py  test_pyfpe.py  testzlib-0.0.1-cp310-cp310-linux_x86_64.whl
tests/integration/android/: spam-0.1.0-cp313-cp313-android_24_arm64_v8a.whl
tests/integration/arch-wheels/: testsimple-0.0.1-cp313-cp313-linux_aarch64.whl  testsimple-0.0.1-cp313-cp313-linux_armv7l.whl  testsimple-0.0.1-cp313-cp313-linux_i686.whl  testsimple-0.0.1-cp313-cp313-linux_riscv64.whl  testsimple-0.0.1-cp313-cp313-linux_s390x.whl  testsimple-0.0.1-cp313-cp313-linux_x86_64.whl
tests/integration/arch-wheels/glibc/: testsimple-0.0.1-cp313-cp313-linux_armv5l.whl  testsimple-0.0.1-cp313-cp313-linux_mips64.whl  testsimple-0.0.1-cp313-cp313-linux_ppc64le.whl
tests/integration/arch-wheels/musllinux_1_2/: testsimple-0.0.1-cp312-cp312-linux_aarch64.whl  testsimple-0.0.1-cp312-cp312-linux_armv6l.whl  testsimple-0.0.1-cp312-cp312-linux_armv7l.whl  testsimple-0.0.1-cp312-cp312-linux_i686.whl  testsimple-0.0.1-cp312-cp312-linux_ppc64le.whl  testsimple-0.0.1-cp312-cp312-linux_riscv64.whl  testsimple-0.0.1-cp312-cp312-linux_s390x.whl  testsimple-0.0.1-cp312-cp312-linux_x86_64.whl
tests/integration/gepetto_example_adder/: gepetto_example_adder-3.0.2-cp36-cp36m-linux_x86_64.whl  gepetto_example_adder-3.0.2-cp37-cp37m-linux_x86_64.whl  gepetto_example_adder-3.0.2-cp38-cp38-linux_x86_64.whl  gepetto_example_adder-3.0.2-cp39-cp39-linux_x86_64.whl  libboost_python36.so.1.72.0.xz  libboost_python37.so.1.72.0.xz  libboost_python38.so.1.72.0.xz  libboost_python39.so.1.72.0.xz  libexample-adder.so.3.0.2-6-gd319.xz  script.sh
tests/integration/internal_rpath/: Makefile  pyproject.toml  setup.py
tests/integration/multiple_top_level/: MANIFEST.in  Makefile  pyproject.toml  setup.cfg  setup.py
tests/integration/nonpy_rpath/: README.md  hello.cpp  nonpy_rpath.cpp  setup.py
tests/integration/sample_extension/: pyproject.toml  setup.py
tests/integration/test_aarch64_glibc_blacklist/: CMakeLists.txt  pthread_default_attr.c  pyproject.toml  signaling.cpp  tst-tls-atexit-lib.c
tests/integration/test_glibcxx_3_4_25/: setup.py  testentropy.cpp
tests/integration/test_mvec/: CMakeLists.txt  pyproject.toml
tests/integration/test_nonpy_dependencies/: dependency.cpp  dependency.h  nonpy_dependency.cpp  nonpy_dependency.h  setup.py  testdependencies.cpp
tests/integration/testdependencies/: dependency.c  dependency.h  setup.py  testdependencies.c
tests/integration/testpackage/: setup.py
tests/integration/testpartialresolution/: setup.py
tests/integration/testrpath/: MANIFEST.in  setup.py
tests/integration/testsimple/: setup.py  testsimple.c
tests/integration/testzlib/: setup.py  testzlib.c
tests/pr134/hello_module/: .gitignore  hello.cpp
tests/runpath/: MANIFEST.in  Makefile  setup.py
tests/testdependencies/: testdependencies.c
tests/testpackage/: setup.py
tests/testpackage/testpackage/: __init__.py
tests/unit/: test-permissions.zip.xz  test_architecture.py  test_condatools.py  test_elfpatcher.py  test_elfutils.py  test_genericpkgctx.py  test_hashfile.py  test_json.py  test_lddtree.py  test_libc.py  test_main.py  test_main_repair_debug_symbols.py  test_main_repair_strip_levels.py  test_main_show.py  test_musllinux.py  test_policy.py  test_repair.py  test_repair_debug_symbols.py  test_repair_strip_levels.py  test_repair_wheel_integration.py  test_sboms.py  test_strip_levels.py  test_tmpdirs.py  test_tools.py  test_wheel_abi.py  test_wheeltools.py
(+35 files in other folders)
