[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "auditwheel"
dynamic = ["version"]
description = "Cross-distribution Linux wheels"
readme = "README.rst"
license = {text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Robert T. McGibbon", email = "rmcgibbo@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "packaging>=20.9",
    "pyelftools>=0.24",
]

[project.scripts]
auditwheel = "auditwheel.main:main"

[project.urls]
Homepage = "https://github.com/pypa/auditwheel"

[dependency-groups]
test = ["pytest>=3.4", "jsonschema", "patchelf", "pretend", "docker"]
coverage = ["pytest-cov>=7", "coverage[toml]>=7.13", {include-group = "test"}]
dev = [{include-group = "test"}, {include-group = "coverage"}]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
auditwheel = ["*.json"]

[tool.setuptools_scm]
# enable version inference

[tool.coverage.run]
branch = true
parallel = true
patch = ["subprocess"]
omit = [
  "*/_vendor/*",
]

[tool.coverage.paths]
source = [
    "src/auditwheel/",
    "/auditwheel_src/src/auditwheel/",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_defs = false
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
extra_checks = true
strict = false
strict_equality = true
warn_redundant_casts = true
warn_unreachable = false
warn_unused_configs = true
warn_unused_ignores = true
untyped_calls_exclude = ["elftools.elf.elffile.ELFFile", "elftools.elf.sections.NoteSection"]

[[tool.mypy.overrides]]
module = "auditwheel.*"
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "auditwheel._vendor.*"
follow_imports = "skip"
ignore_errors = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 20

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
  "C901",
  "D",  # TODO add doc
  "FIX002", # TODO
  "PLR",    # Design related pylint codes
  "S6",     # TODO flake8-bandit subprocess related
  "TD",
]
exclude = ["src/auditwheel/_vendor"]

[tool.ruff.lint.per-file-ignores]
"scripts/calculate_symbol_versions.py" = ["ANN", "INP001", "PTH", "T201"]
"src/auditwheel/lddtree.py" = ["PTH"]
"src/auditwheel/main*.py" = ["PLC0415", "T201"]
"src/auditwheel/condatools.py" = ["ANN204"]
"src/auditwheel/wheeltools.py" = ["ANN204"]
"tests/**.py" = ["ANN", "ERA001", "FBT", "FIX002", "S101", "SLF001", "T201", "TC002", "TC003", "TD"]
"tests/integration/**.py" = ["PTH"]
"tests/integration/*/**.py" = ["INP001", "PERF"]
