[metadata]
name = auditwheel
home_page = https://github.com/pypa/auditwheel
license = MIT
author = Robert T. McGibbon
author_email = rmcgibbo@gmail.com
summary = Cross-distribution Linux wheels
description_file = README.rst
long_description_content_type = text/x-rst
python_requires = >=3.6
classifier =
        Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3 :: Only
        Topic :: Software Development
        Topic :: Software Development :: Build Tools
        Topic :: Software Development :: Libraries :: Python Modules

[pbr]
skip_changelog = 1
skip_authors = 1

[options]
include_package_data = True
packages = find:
package_dir =
    =src

[options.package_data]
auditwheel = *.json

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    auditwheel = auditwheel.main:main

[tool:pytest]
log_cli = true
log_cli_level = 20

[flake8]
ignore = E203,W503
max-line-length = 88
exclude =
    _vendor
